--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                             <a href="https://github.com/pavankumar89002" target="_blank" class="social__link">
                                 <i class='bx bxl-github social__icon' ></i> @pavankumar89002
                             </a>
+                            <a href="https://lifeofpetsofficial.blogspot.com/" target="_blank" class="social__link">
+                                <i class='bx bxl-blogger social__icon' ></i> @Life of Pets
+                            </a>
                         </div>
                     </section>
 
@@ -159,7 +162,7 @@
                                 </div>
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">12TH</h3>
+                                    <h3 class="education__title">XII</h3>
                                     <span class="education__studies">Infant Jesus Matric HSS</span>
                                     <span class="education__year">Percentage - 74%</span>
                                     <span class="education__year">2018 - 2019</span>
@@ -173,7 +176,7 @@
                                 </div>
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">10TH</h3>
+                                    <h3 class="education__title">X</h3>
                                     <span class="education__studies">Infant Jesus Matric HSS</span>
                                     <span class="education__year">Percentage - 86%</span>
                                     <span class="education__year">2016 - 2017</span>
