--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <section class="profile section" id="profile">
                         <h2 class="section-title">Profile</h2>
 
-                        <p align="justify">I'm highly organized and meticulous. I'm a quick learner and can work both individually and as a team. I'm seeking a challenging position in a reputed organization where I can learn new skils, expand my knowledge, and leverage my learnings.</p>
+                        <p align="justify">A highly driven individual looking for a challenging position in an organization specializing be the impetus to my professional and personal prosperity. I am a quick learner who can work in any given environment individually as well as a team. I am a creative and innovative person.</p>
                     </section>
 
                     <!--========== EDUCATION ==========-->
